<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_white_rect"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/congratulations_on_your_new_habit"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="@dimen/text_size_big" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:gravity="center"
        android:text="@string/remember_that_you_need_to_create_good_habits_first_of_all_to_yourself_and_secondly_to_others_on_which_you_can_influence" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@android:color/black" />

    <Button
        android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ok_button_height"
        android:background="@android:color/transparent"
        android:text="@string/create_a_new_habit" />
</LinearLayout>