<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:plainpie="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="goal"
            type="com.vrgsoft.mygoal.data.db.alerts.Goal"/>
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/main_back"
            android:scaleType="centerCrop"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.vrgsoft.mygoal.presentation.main.addhabit.AddHabitActivity">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginLeft="@dimen/card_margin"
                android:layout_marginRight="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin"
                android:layout_marginTop="@dimen/card_margin_double"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/constraint_padding">


                    <TextView
                        android:id="@+id/tvHabitName"
                        android:text="@{goal.MName}"
                        tools:text="Habit Name"
                        android:textSize="@dimen/item_text_size"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginEnd="@dimen/habit_text_margin"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        android:layout_marginStart="@dimen/habit_text_margin"
                        android:layout_marginTop="@dimen/habit_margin_top"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:layout_width="@dimen/goal_descr_width"
                        android:layout_height="@dimen/goal_descr_height"
                        android:text="@{goal.MDescr}"
                        tools:text="quastion"
                        android:gravity="center"
                        android:textSize="@dimen/question_text_size"
                        android:layout_marginTop="@dimen/goal_descr_margin_top"
                        app:layout_constraintTop_toBottomOf="@+id/tvHabitName"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:id="@+id/tvQuestion" />


                    <Button
                        android:id="@+id/checkHabbit"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/habit_checkbox_height"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        android:background="@drawable/bt_drawable"
                        android:text="@string/yes"
                        android:textColor="@android:color/white"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginStart="@dimen/habit_text_margin"
                        android:layout_marginEnd="@dimen/habit_text_margin"
                        android:layout_marginTop="@dimen/check_habit_margin_top"
                        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />

                    <az.plainpie.PieView
                        android:id="@+id/pieView"
                        android:layout_width="@dimen/pin_width"
                        android:layout_height="@dimen/pin_height"

                        plainpie:inner_pie_padding="30"
                        plainpie:percentage="75"
                        plainpie:percentage_size="16"
                        plainpie:inner_text_visibility="true"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginTop="@dimen/habit_text_margin"
                        app:layout_constraintTop_toBottomOf="@+id/checkHabbit"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/habit_text_margin" />

                    <TextView
                        android:id="@+id/tvNotifyTime"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/notify_time_height"
                        android:text="@string/notification_time"
                        android:textStyle="bold"
                        android:layout_marginLeft="0dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/ivEdit"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        app:layout_constraintHorizontal_bias="0.605"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="@dimen/habit_text_margin"
                        app:layout_constraintTop_toTopOf="parent"

                        app:layout_constraintVertical_bias="0.0" />

                    <TextView
                        android:id="@+id/notifyTimeToShow"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/black"
                        tools:text="23:26"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        android:layout_marginStart="@dimen/habit_text_margin"
                        android:layout_marginEnd="@dimen/activity_horizontal_margin"
                        app:layout_constraintLeft_toRightOf="@+id/tvNotifyTime"
                        app:layout_constraintRight_toLeftOf="@+id/ivEdit"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        app:layout_constraintHorizontal_bias="0.562"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="0dp" />

                    <ImageView
                        android:id="@+id/ivEdit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/ic_mode_edit_black_24dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="0dp"
                        android:layout_marginLeft="@dimen/habit_text_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        android:layout_marginRight="@dimen/habit_text_margin"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintHorizontal_bias="1.0" />



                </android.support.constraint.ConstraintLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp"
                app:cardElevation="@dimen/habit_text_margin"
                app:layout_constraintTop_toTopOf="@+id/habbitTv"
                android:layout_marginTop="@dimen/habit_text_margin"
                app:layout_constraintRight_toLeftOf="@+id/habbitTv"
                android:layout_marginLeft="@dimen/habit_text_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintVertical_bias="0.0"
                android:layout_marginStart="@dimen/habit_text_margin">

                <ImageView
                    android:id="@+id/emojiShow"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:srcCompat="@drawable/ic_collections"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="25dp"/>
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/habbitTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/habit_text_margin"
                android:layout_marginEnd="@dimen/habit_text_margin"
                android:layout_marginLeft="@dimen/habit_text_margin"
                android:layout_marginRight="@dimen/habit_text_margin"
                android:layout_marginStart="@dimen/habit_text_margin"
                android:layout_marginTop="@dimen/habit_text_margin"
                android:text="@string/check_your_habbit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/habit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/cardView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>



        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>